# phpp

./: .travis.yml  CMakeLists.txt  CMakeSettings.json  README.MD
cmake/: phpp-pluginsConfig.cmake.in
examples/: CMakeLists.txt  interfaces.hpp  phpp_examples.cpp  phpp_examples.hpp  utilities.hpp
examples/extlib1/: extlib1.cpp  extlib1.hpp
examples/extlib2/: extlib2.cpp  extlib2.hpp
include/phpp/: phpp.hpp  phpp_handler.hpp  phpp_interface.hpp  phpp_libhandler.hpp
tests/: CMakeLists.txt  phpp_tests.cpp
